# sakurs

./: .gitignore  AGENTS.md  ARCHITECTURE_NOTES.md  ARCHITECTURE_REFACTOR_SUMMARY.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README-boundary-reducer-v2.md  README.md  REFACTORING_PLAN.md  SECURITY.md  pyproject.toml  test_streaming.sh
benchmarks/: README.md  pyproject.toml  requirements.txt
benchmarks/baselines/ja_sentence_segmenter/: __init__.py  benchmark.py  cli.py  segmenter.py
benchmarks/baselines/nltk_punkt/: __init__.py  benchmark.py  cli.py  segmenter.py
benchmarks/cli/: .gitignore  Makefile  README.md  requirements.txt  run_experiments.py  run_experiments.sh
benchmarks/cli/results/: .gitkeep
benchmarks/cli/scripts/: README.md  __init__.py  aggregate_results.py  analyze_results.py  comparison_tests.py  create_sized_samples.py  enhance_comparison_results.py  evaluate_accuracy.py  evaluate_tool_accuracy.py  format_results.py  metrics.py  parallel_runner.py  prepare_data.py  results_formatter.py  run_integrated_benchmarks.py  run_scalability_benchmark.py  statistical_analysis.py
benchmarks/cli/tests/: __init__.py  test_metrics.py  test_results_formatter.py
benchmarks/core/: Cargo.toml
benchmarks/core/benches/: accuracy.rs  brown_corpus.rs  comparison.rs  performance.rs  scalability.rs  ud_english_ewt.rs
benchmarks/core/examples/: accuracy_report.rs  analyze_accuracy.rs  brown_corpus_performance.rs  brown_corpus_report.rs  comparison_report.rs  performance_scaling.rs  scalability_report.rs  ud_english_ewt_accuracy_report.rs  ud_english_ewt_error_analysis.rs
benchmarks/core/src/: config.rs  constants.rs  data.rs  error.rs  harness.rs  lib.rs  metrics.rs  paths.rs  utils.rs
benchmarks/core/tests/: brown_corpus_tests.rs  schema_validation_test.rs
benchmarks/data/: base_loader.py  schema.py
benchmarks/data/brown_corpus/: .gitignore  Makefile  README.md  __init__.py  create_subsets.py  download.py  loader.py  pyproject.toml
benchmarks/data/ud_english_ewt/: Makefile  README.md  __init__.py  download.py  loader.py
benchmarks/data/ud_japanese_bccwj/: Makefile  README.md  __init__.py  download.py  loader.py
benchmarks/data/ud_japanese_gsd/: Makefile  README.md  __init__.py  download.py  loader.py
benchmarks/data/wikipedia/: README.md  __init__.py  download.py  extractor.py  loader.py  sampler.py  version_manager.py
sakurs-api/: Cargo.toml
sakurs-api/examples/: basic_usage.rs
sakurs-api/src/: config.rs  dto.rs  error.rs  lib.rs
sakurs-api/tests/: abbrev_test.rs  basic_tests.rs  prof_abbrev_test.rs  test_ip_address.rs
sakurs-cli/: Cargo.toml  README.md
sakurs-cli/src/: error.rs  language_source.rs  lib.rs  main.rs
sakurs-cli/src/commands/: generate_config.rs  mod.rs  process.rs  validate.rs
sakurs-cli/src/config/: mod.rs
sakurs-cli/src/input/: file_reader.rs  glob_resolver.rs  mod.rs
sakurs-cli/src/output/: json.rs  markdown.rs  mod.rs  text.rs
sakurs-cli/src/progress/: mod.rs
sakurs-cli/tests/: cli_integration.rs  external_language_config.rs  external_language_config.rs.disabled
sakurs-cli/tests/fixtures/: README.md  english-sample.txt  japanese-sample.txt
sakurs-core/: Cargo.toml  README.md
sakurs-core/benches/: adaptive_comparison.rs  adaptive_profiling.rs  application_benchmarks.rs  scaling_bottleneck_analysis.rs  sentence_processor_benchmarks.rs  smallvec_comparison.rs  streaming_benchmark.rs  throughput_baseline.rs
sakurs-core/configs/languages/: en.toml  english.toml  japanese.toml
sakurs-core/examples/: unified_api.rs
sakurs-core/src/: character_window.rs  delta_stack.rs  lib.rs  traits.rs  types.rs
sakurs-core/src/api/: config.rs  error.rs  input.rs  language.rs  mod.rs  output.rs  processor.rs  tests.rs
sakurs-core/src/application/: chunking.rs  config.rs  mod.rs  (+5 more)
sakurs-core/tests/: abbrev_test.rs  adaptive_integration.rs  apostrophe_handling_tests.rs  application_integration.rs  basic_tests.rs  benchmark_test.rs  bracket_pattern_tests.rs  chunk_invariance.proptest-regressions  chunk_invariance.rs  chunking_regressions.rs  configurable_language_tests.rs  cross_chunk_enclosure_tests.rs  cross_chunk_tests.rs  debug_boundaries.rs  debug_configurable.rs  debug_enclosure.rs  debug_home.rs  end_to_end_tests.rs  enhanced_chunking_tests.rs  golden_rules.rs  japanese_integration.rs  japanese_language_tests.rs  multi_language_tests.rs  overlap_chunking_tests.rs  parallel_chunk_coordination_tests.rs  quote_suppression_tests.rs  reduce_v2_tests.rs  sentence_processor_integration.rs  strategy_comparison_tests.rs  streaming_integration_tests.rs  symmetric_quote_test.rs  test_ip_address.rs  test_simple_quote.rs  test_symmetric_quotes.rs  thread_pool_test.rs  unbalanced_enclosure_regressions.rs  usa_test.rs  utf8_safety_tests.rs  utf8_window_regressions.rs
sakurs-delta-core/: Cargo.toml
sakurs-delta-core/src/: error.rs
sakurs-delta-core/tests/: basic_tests.rs
sakurs-engine/: Cargo.toml
sakurs-engine/src/: adaptive_dispatcher.rs  assembler.rs  chunker.rs  config.rs  error.rs  input.rs  language.rs  lib.rs  processor.rs  processor_config.rs
sakurs-engine/tests/: basic_tests.rs  test_ip_address.rs  test_new_api.rs
sakurs-py/: Cargo.toml  README.md  benchmark_detailed.py  profile_pyo3_overhead.py  profile_rust_bindings.py  profile_scaling_detailed.py  py.typed  pyproject.toml  sakurs.pyi
sakurs-py/benchmarks/: __init__.py  conftest.py  generate_summary.py  test_benchmark_english.py  test_benchmark_japanese.py  test_local.py
sakurs-py/examples/: README.md  basic_usage.py  custom_language.py  error_handling.py  performance_tuning.py  streaming_demo.py
sakurs-py/src/: error.rs  exceptions.rs  input.rs  iterator.rs  language_config.rs  lib.rs  output.rs  processor.rs  stream.rs  types.rs
sakurs-py/tests/: __init__.py  test_basic.py  test_basic_split.py  test_bytes_input.py  test_error_handling.py  test_file_input.py  test_filelike_input.py  test_language_config.py  test_performance_params.py  test_processor.py  test_streaming.py  test_streaming_simple.py
(+197 files in other folders)
