[workspace]
members = [
    "sakurs-core",
    "sakurs-cli",
    # "sakurs-py",  # Temporarily disabled until PyO3 supports Python 3.13
]
resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["Ryo Sogabe <sog4be.ryo@gmail.com>"]
edition = "2021"
license = "MIT"
repository = "https://github.com/sog4be/sakurs"
rust-version = "1.81"

[workspace.dependencies]
# Common dependencies
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
