[workspace]
members = [
    "sakurs-core",
    "sakurs-cli",
    "sakurs-py",
]
resolver = "2"

[workspace.package]
version = "0.1.1"
authors = ["sog4be <163720533+sog4be@users.noreply.github.com>"]
edition = "2021"
license = "MIT"
repository = "https://github.com/sog4be/sakurs"
homepage = "https://github.com/sog4be/sakurs"
documentation = "https://docs.rs/sakurs-cli"  # Points to the published CLI crate
rust-version = "1.81"

[workspace.dependencies]
# Common dependencies
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
