[package]
name = "sakurs-cli"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/sakurs-cli"
rust-version.workspace = true
description = "Command-line interface for Sakurs sentence boundary detection"
keywords = ["cli", "sentence-boundary", "text-processing", "nlp", "tool"]
categories = ["command-line-utilities", "text-processing"]
readme = "README.md"
exclude = [
    ".*",
    "tests/*",
    "target/*",
    "Cargo.lock"
]

[[bin]]
name = "sakurs"
path = "src/main.rs"

[dependencies]
sakurs-core = { version = "0.1.0", path = "../sakurs-core" }
clap = { version = "4.5", features = ["derive", "cargo", "env"] }
anyhow = "1.0"
indicatif = "0.18"
glob = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
env_logger = "0.11"
log = "0.4"
rayon = "1.10"
toml = "0.9"
num_cpus = "1.16"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.10"