[package]
name = "sakurs-core"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
thiserror.workspace = true
serde.workspace = true
# Memory optimization
smallvec = { version = "1.13", features = ["union", "serde"] }
# Parallel processing support
rayon = { version = "1.10", optional = true }
num_cpus = { version = "1.16", optional = true }

[dev-dependencies]
criterion = { version = "0.6", features = ["html_reports"] }
proptest = "1.0"

[[bench]]
name = "application_benchmarks"
harness = false

[[bench]]
name = "smallvec_comparison"
harness = false

[features]
default = ["std", "parallel"]
std = []
parallel = ["rayon", "num_cpus"]
# no_std support preparation
no_std = []
# WASM support
wasm = []