[package]
name = "sakurs-core"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
description = "Core Delta-Stack Monoid algorithm for sentence boundary detection"

[features]
default = ["std"]
std = ["alloc", "serde?/std", "toml"]
alloc = ["serde"]

[dependencies]
# Minimal dependencies for configuration
serde = { version = "1.0", features = ["derive"], default-features = false, optional = true }
# toml requires std
toml = { version = "0.8", optional = true }

[dev-dependencies]
# For testing only