[package]
name = "sakurs-engine"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
description = "Application orchestration layer for Sakurs sentence boundary detection"

[dependencies]
sakurs-core = { path = "../sakurs-core", features = ["std"] }
thiserror.workspace = true
rayon = { version = "1.10", optional = true }

[features]
default = ["parallel", "std"]
parallel = ["rayon"]
std = []

[dev-dependencies]
criterion = "0.5"