[package]
name = "sakurs-py"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/sakurs-py"
rust-version.workspace = true
description = "Python bindings for Sakurs sentence boundary detection"
keywords = ["python", "sentence-boundary", "text-processing", "nlp", "pyo3"]
categories = ["text-processing", "api-bindings"]
readme = "../README.md"
exclude = [
    ".*",
    "tests/*",
    "target/*",
    "Cargo.lock",
    "__pycache__/*",
    "*.pyc",
    ".venv/*"
]

[lib]
name = "sakurs"
crate-type = ["cdylib", "rlib"]  # Both for testing flexibility

[dependencies]
pyo3 = { version = "0.25", features = ["abi3-py39"] }  # abi3 for forward compatibility
sakurs-core = { path = "../sakurs-core" }
thiserror = { workspace = true }
toml = "0.9"
encoding_rs = "0.8"

[dev-dependencies]
pyo3 = { version = "0.25", features = ["auto-initialize"] }

[features]
default = []
extension-module = ["pyo3/extension-module"]  # NOT a default feature