[package]
name = "sakurs-py"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
description = "Python bindings for Sakurs sentence boundary detection"
readme = "README.md"
publish = false  # Python package - published to PyPI, not crates.io
# Note: keywords, categories, and docs.rs link removed since not publishing to crates.io
exclude = [
    ".*",
    "tests/*",
    "target/*",
    "Cargo.lock",
    "__pycache__/*",
    "*.pyc",
    ".venv/*"
]

[lib]
name = "sakurs"
crate-type = ["cdylib", "rlib"]  # Both for testing flexibility

[dependencies]
pyo3 = { version = "0.25", features = ["abi3-py39"] }  # abi3 for forward compatibility
sakurs-api = { path = "../sakurs-api" }
sakurs-engine = { path = "../sakurs-engine" }
sakurs-delta-core = { path = "../sakurs-delta-core" }
sakurs-core = { path = "../sakurs-core" }
thiserror = { workspace = true }
toml = "0.9"
encoding_rs = "0.8"

[dev-dependencies]
pyo3 = { version = "0.25", features = ["auto-initialize"] }

[features]
default = []
extension-module = ["pyo3/extension-module"]  # NOT a default feature