[package]
name = "sakurs-benchmarks"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
sakurs-core = { path = "../../sakurs-core" }
criterion = { version = "0.6", features = ["html_reports"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rayon = { version = "1.10", optional = true }
num_cpus = { version = "1.16", optional = true }

[dev-dependencies]
# For testing the benchmarks themselves
proptest = "1.0"

[[bench]]
name = "accuracy"
harness = false

[[bench]]
name = "performance"
harness = false

[[bench]]
name = "scalability"
harness = false

[[bench]]
name = "brown_corpus"
harness = false

# Comparison with baselines will be added later
# [[bench]]
# name = "comparison"
# harness = false

[[example]]
name = "brown_corpus_report"

[features]
default = ["parallel"]
parallel = ["sakurs-core/parallel", "rayon", "num_cpus"]